# mluvify

./: README.md  build_and_run.py  docs.md
mluvify_be/: config.toml  pyproject.toml  requirements.txt
mluvify_be/app/: main.py
mluvify_be/app/core/: context.py  networkx.py  ollama.py  settings.py  spacy.py  whisper.py
mluvify_be/app/criteria/: compute_density.py  lexical_richness.py  speech_graph.py  speech_rate.py  window_semantic_similarity.py
mluvify_be/app/routers/: analyze.py
mluvify_be/app/utils/: deps.py
mluvify_fe/: README.md  package-lock.json  package.json  svelte.config.js
mluvify_fe/src/lib/components/: AudioRecorder.svelte  AudioUploader.svelte  Button.svelte
mluvify_fe/src/routes/: +page.svelte
