[project]
name = "mluvify-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "faster-whisper>=1.2.1",
    "filetype>=1.2.0",
    "networkx>=3.6.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings[toml]>=2.14.1",
    "python-multipart>=0.0.29",
    "spacy>=3.8.14",
]
