[project]
name = "mluvify-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cs-core-news-sm>=0.2.1",
    "fastapi[standard]>=0.136.1",
    "faster-whisper>=1.2.1",
    "filetype>=1.2.0",
    "lexicalrichness>=0.5.1",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings[toml]>=2.14.1",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "torch==2.6.0+cu124",
    "torchaudio==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
